# telegram-spongifybot

./: .envrc  .gitignore  LICENSE  README.md  flake.nix  fourmolu.yaml  telegram-spongifybot.cabal
.github/workflows/: build-n-push.yml  nix-flake-update.yml  update-flake-lock.yml
app/: Main.hs
