cabal-version:      3.0
name:               telegram-spongifybot
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           t.me/spongifybot
license:            MIT
license-file:       LICENSE
author:             Luca Mosetti
maintainer:         luka.mosetti@gmail.com
-- copyright:
build-type:         Simple

common warnings
    ghc-options: -Wall

executable telegram-spongifybot
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        universum,
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
