cabal-version:      3.0
name:               telegram-spongifybot
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           t.me/spongifybot
license:            MIT
license-file:       LICENSE
author:             Luca Mosetti
maintainer:         luka.mosetti@gmail.com
-- copyright:
build-type:         Simple

common warnings
    ghc-options: -Wall

common threads
    ghc-options: -threaded -with-rtsopts=-N

executable telegram-spongifybot
    import:
        warnings,
        threads,
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        aeson,
        aeson-schemas,
        http-conduit,
        universum,
        stm,
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
